# deepaudio-x

./: .gitignore  LICENSE  README.md  dev.ipynb  main.py  pyproject.toml  test_dataset.py  test_sdk.py
.github/workflows/: tests.yml
deepaudiox/backbones/beats/: beatswrapper.py
src/deepaudiox/: __init__.py
src/deepaudiox/backbones/: __init__.py
src/deepaudiox/callbacks/: __init__.py  base_callback.py  checkpointer.py  console_logger.py  early_stopper.py  reporter.py
src/deepaudiox/classifier/: classifier.py
src/deepaudiox/config/: __init__.py  base_config.py  data_config.py  loss_config.py  loss_config_registry.py  model_config.py  optimization_config.py  optimization_config_registry.py  scheduling_config.py  scheduling_config_registry.py  training_config.py
src/deepaudiox/datasets/: __init__.py  audio_classification_dataset.py  dataset_manager.py
src/deepaudiox/engine/: __init__.py  evaluator.py  trainer.py
src/deepaudiox/loops/: __init__.py  evaluator.py  trainer.py
src/deepaudiox/loss_functions/: __init__.py  loss_functions.py  loss_registry.py
src/deepaudiox/models/: __init__.py  wav2vec_classifier.py
src/deepaudiox/modules/: audio_classifier_constructor.py  base_audio_classifier.py
src/deepaudiox/optimizers/: __init__.py  optimizer_registry.py  optimizers.py
src/deepaudiox/schedulers/: __init__.py  scheduler_registry.py  schedulers.py
src/deepaudiox/utils/: __init__.py  audio_utils.py  io_utils.py  reporting_utils.py  (+1 more)
tests/: test_audio_classification_dataset.py  test_backbones.py  test_classifiers.py  test_dataset_manager.py
(+20 files in other folders)
