[project]
name = "deepaudio-x"
version = "0.1.0"
description = "DeepAudio-X: Self-supervised audio toolkit for audio classification and beyond."
authors = [
  { name = "Christos Nikou", email = "chrisnick92@gmail.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]

[tool.ruff]
# Set the maximum line length to 120
line-length = 120
exclude = [
    "src/deepaudiox/backbones/beats/beats_modules"
]

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepaudiox"]

[project.urls]
Homepage = "https://github.com/magcil/deepaudio-x"
Repository = "https://github.com/magcil/deepaudio-x"
